--- a/packages/konponents/src/styles/main.scss
+++ b/packages/konponents/src/styles/main.scss
@@ -26,6 +26,8 @@
 
 @use 'components/modal/KonPremades';
 
+@use 'components/KonNotification';
+
 @use 'animations/components/KonCollapse';
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
