--- a/packages/docs/.vuepress/theme/styles/index.styl
+++ b/packages/docs/.vuepress/theme/styles/index.styl
@@ -45,7 +45,7 @@ body
   font-size 16px
 
 .page
-  padding-left $sidebarWidth
+  padding-left unquote("var(--doc-sidebar-width)")
 
 .navbar
   position fixed
@@ -71,7 +71,6 @@ body
   position fixed
   z-index 10
   margin 0
-  top $navbarHeight
   left 0
   bottom 0
   box-sizing border-box
