--- a/packages/docs/.vuepress/theme/styles/mobile.styl
+++ b/packages/docs/.vuepress/theme/styles/mobile.styl
@@ -32,6 +32,6 @@ $mobileSidebarWidth = $sidebarWidth * 0.82
   h1
     font-size 1.4rem
   {$contentClass}
-    div[class*="language-"]
-      margin 0.85rem -1.5rem
-      border-radius 0
+    .kon-snippets
+      margin -5px
+      margin-top 0
