--- a/packages/konponents/src/styles/components/select/_KonSelect.scss
+++ b/packages/konponents/src/styles/components/select/_KonSelect.scss
@@ -30,6 +30,7 @@
     border-radius: 12px;
     user-select: none;
     min-width: 200px;
+    max-width: 200px;
     cursor: pointer;
     transition-property: border-radius, transform, background, filter, padding;
     transition-timing-function: ease;
