--- a/packages/konponents/src/styles/components/select/_KonSelectMultiple.scss
+++ b/packages/konponents/src/styles/components/select/_KonSelectMultiple.scss
@@ -23,7 +23,7 @@
     border-radius: 12px;
     user-select: none;
     min-width: 200px;
-    max-width: 100%;
+    max-width: 200px;
     cursor: pointer;
     transition-property: border-radius, transform, background, filter, padding;
     transition-timing-function: ease;
@@ -86,7 +86,10 @@
         display: inline-block;
         flex: 1;
         max-width: 100%;
-        min-width: 40px;
+        min-width: 80px;
+        padding-left: 4px;
+        font-family: 'Poppins';
+        font-size: var(--font-size);
         transition-property: opacity, transform;
         transition-duration: 250ms;
         transition-timing-function: ease;
