--- a/packages/konponents/src/styles/components/select/_Shared.scss
+++ b/packages/konponents/src/styles/components/select/_Shared.scss
@@ -10,6 +10,7 @@
     margin: var(--margin);
     &.full-width{
         width: 100%;
+        max-width: none;
     }
     &.has-label{
         margin-top: 22px;
